fix(ig-ts): Make use of all visible height

--- a/packages/cli/templates/angular/ig-ts/projects/empty/files/src/app/app.component.css
+++ b/packages/cli/templates/angular/ig-ts/projects/empty/files/src/app/app.component.css
@@ -2,5 +2,5 @@
   display: flex;
   background: url(../assets/lines-bottom-right.svg) right bottom;
   background-repeat: no-repeat;
-  height:  100%;
+  height:  100vh;
 }
